microsoft-dotnet/3.0/modules/ROOT/pages/index.adoc
= Microsoft .NET Connector - Mule 4
:page-aliases: connectors::microsoft/microsoft-dotnet-connector.adoc

Support Category: https://www.mulesoft.com/legal/versioning-back-support-policy#anypoint-connectors[Select]

Microsoft .NET Connector v3.0

Anypoint Connector for Microsoft .NET enables you to execute native .NET code in a Mule application.

Supported scenarios include: executing code in an existing binary assembly (DLL) without modification, or new development of .NET code that extends the capability of your integration application.

This connector executes .NET code using the Java Native Interface (JNI), which provides fast interprocess communication between the Java Virtual Machine (JVM) and a native application running in a host operating system.

The connector supports one operation, the Execute operation, which allows users to select a class and a method to execute, and to pass the corresponding arguments for that method.

NOTE: This connector is compatible only with Java 8.

Release Notes: xref:release-notes::connector/microsoft-dotnet-connector-release-notes-mule-4.adoc[Microsoft .NET Connector Release Notes] +
Exchange: https://www.mulesoft.com/exchange/com.mulesoft.connectors/mule-microsoft-dotnet-connector/[Microsoft .NET Connector]

== Prerequisites

To use this information, you should be familiar with .NET, Mule runtime engine (Mule), Anypoint Connectors, Anypoint Studio, Mule concepts, elements in a Mule flow, and Global Elements.

For software requirements and compatibility information, see the Connector Release Notes.

To use this connector with Maven, view the pom.xml dependency information in the Dependency Snippets in Anypoint Exchange.

NOTE: This connector is not supported for use with Anypoint Design Center.

== POM File Information

[source,xml,linenums]
----
<dependency>
  <groupId>com.mulesoft.connectors</groupId>
  <artifactId>mule-microsoft-dotnet-connector</artifactId>
  <version>RELEASE</version>
  <classifier>mule-plugin</classifier>
</dependency>
----

Mule converts RELEASE to the latest version. To specify a version, view
https://www.mulesoft.com/exchange/com.mulesoft.connectors/mule-microsoft-dotnet-connector/[Microsoft .NET Connector] in
Anypoint Exchange and click *Dependency Snippets*.

== Connect in Anypoint Studio 7

You can use this connector in Anypoint Studio by first downloading it from Exchange and configuring it as needed.

== Add the Connector to a Studio Project

Anypoint Studio provides two ways to add the connector to your Studio project: from the Exchange button in the Studio taskbar or from the Mule Palette view.

=== Add the Connector Using Exchange

. In Studio, create a Mule project.
. Click the Exchange icon *(X)* in the upper-left of the Studio task bar.
. In Exchange, click *Login* and supply your Anypoint Platform username and password.
. In Exchange, search for ".net".
. Select the connector and click *Add to project*.
. Follow the prompts to install the connector.

=== Add the Connector in Studio

. In Studio, create a Mule project.
. In the Mule Palette view, click *(X) Search in Exchange*.
. In *Add Modules to Project*, type ".net" in the search field.
. Click this connector's name in *Available modules*.
. Click *Add*.
. Click *Finish*.

=== Configure in Studio

. Drag the connector operation of your choice to the Studio canvas.
. For general settings complete these fields:
+
image::microsoft-dotnet-connection.png[Studio General tab]
+
* Scope: The scope of the module:
+
** Singleton: Shares the same instance of the .NET component across multiple calls. This is useful for storing a shared state in class instance members across different calls.
** Transient: Creates a new instance of the .NET component per request.
* Grant Full Trust to the assembly: .NET code can be executed in an application domain with restricted privileges to avoid the execution of malware code that can affect the stability of the Mule Runtime. These restrictions include limited access to the file system, native code execution, network calls, registry access, and more. By default the .NET connector is set to use full trust.
** Declared methods only: `true` is the default value.
** Include auto generated code: `false` is the default value.
+
. Given the selected connection type in the Assembly section, specify the fields as follows:
+
** For the Resource connection type - The Path field contains the relative path to an executable .net library in the resources folder (the default resources folder is src/main/resources).
+
image::microsoft-dotnet-resource-assembly.png[Studio Resource Assembly]
+
** For the External connection type - The Path field contains the full path to an executable .net library.
+
image::microsoft-dotnet-external-assembly.png[Studio External Assembly]
+
** For the GAC connection type - The Assembly Type field contains the fully qualified type name (for example,
`Namespace.ClassName`). This type of configuration is used with an assembly installed in the GAC (Global Assembly Cache).
+
image::microsoft-dotnet-gac-assembly.png[Studio Global Assembly]
+
** For the Legacy connection type - The Assembly Type field contains the fully qualified type name (for example, `Namespace.ClassName`). The Assembly Path should contain Provide the path of the .NET assembly (for example, `C:\Projects\..dll`).
+
image::microsoft-dotnet-legacy-assembly.png[Legacy Assembly]

== Use Case: Studio

image::microsoft-dotnet-use-case.png[Studio Flow Diagram]

. Add an HTTP Listener to the flow.
. Click the green plus sign to configure it.
. Set Host to localhost and Port to 8081.
. Click OK.
. Add the Execute operation from Microsoft .NET connector from the pallet.
. Configure a connection by clicking the green plus sign.
. Set the fields as described in the previous "Configure in Studio" section.
. Select the Type and the Method parameter and provide the arguments.
. Add a Transform Message DataWeave component and set it as follows:
+
[source,dataweave,linenums]
----
%dw 2.0
output application/json
---
payload
----
+
. Perform a curl to `localhost:8081`.

== Use Case XML

[source,xml,linenums]
----

<?xml version="1.0" encoding="UTF-8"?>

<mule xmlns:ee="http://www.mulesoft.org/schema/mule/ee/core"
xmlns:dotnet="http://www.mulesoft.org/schema/mule/dotnet"
xmlns:http="http://www.mulesoft.org/schema/mule/http"
xmlns="http://www.mulesoft.org/schema/mule/core"
xmlns:doc="http://www.mulesoft.org/schema/mule/documentation"
xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
xsi:schemaLocation="http://www.mulesoft.org/schema/mule/core
http://www.mulesoft.org/schema/mule/core/current/mule.xsd
http://www.mulesoft.org/schema/mule/http
http://www.mulesoft.org/schema/mule/http/current/mule-http.xsd
http://www.mulesoft.org/schema/mule/dotnet
http://www.mulesoft.org/schema/mule/dotnet/current/mule-dotnet.xsd
http://www.mulesoft.org/schema/mule/ee/core
http://www.mulesoft.org/schema/mule/ee/core/current/mule-ee.xsd">
	<http:listener-config name="HTTP_Listener_config"
	doc:name="HTTP Listener config"
		<http:listener-connection host="localhost" port="8081" />
	</http:listener-config>
	<dotnet:dot-net-config name="Microsoft_DotNet" doc:name="Microsoft DotNet">
		<dotnet:resource-connection scope="Singleton" path="DemoDotNet.dll" />
	</dotnet:dot-net-config>
	<flow name="sum-of-digits">
		<http:listener doc:name="Listener"
		config-ref="HTTP_Listener_config"
		path="/sumOfDigits"/>
		<ee:transform doc:name="Transform Message">
			<ee:message >
				<ee:set-payload ><![CDATA[%dw 2.0
output application/json
---
{
	number: payload.num
}]]></ee:set-payload>
			</ee:message>
		</ee:transform>
		<dotnet:execute doc:name="Execute" config-ref="Microsoft_DotNet"
		type="DemoDotNet.NumberLibrary, DemoDotNet, Version=1.0.0.0,
		Culture=neutral, PublicKeyToken=PUBLIC_KEY_TOKEN"
		method="DemoDotNet.NumberLibrary, DemoDotNet, Version=1.0.0.0,
		Culture=neutral,
		PublicKeyToken=PUBLIC_KEY_TOKEN | SumOfDigits(System.Int32 number) -&gt; System.Int32"/>
		<ee:transform doc:name="Transform Message">
			<ee:message >
				<ee:set-payload ><![CDATA[%dw 2.0
output application/json
---
payload]]></ee:set-payload>
			</ee:message>
		</ee:transform>
	</flow>

</mule>
----

== See Also

https://help.mulesoft.com[MuleSoft Help Center]
